cta overflow fix (#572)

--- a/eds/blocks/call-to-action/call-to-action.css
+++ b/eds/blocks/call-to-action/call-to-action.css
@@ -37,6 +37,7 @@
 
   > div {
     display: flex;
+    flex-direction: column;
     inline-size: 100%;
 
     > div {
